--- a/Exp1/unicornEarth-base/config.json
+++ b/Exp1/unicornEarth-base/config.json
@@ -15,6 +15,7 @@
   "num_channels": 1,
   "num_hidden_layers": 12,
   "patch_size": 16,
+  "encoder_stride": 16,
   "qkv_bias": true,
   "transformers_version": ""
 }
