--- a/Exp3/unicornEarth-base/config.json
+++ b/Exp3/unicornEarth-base/config.json
@@ -14,7 +14,8 @@
   "num_attention_heads": 12,
   "num_channels": 1,
   "num_hidden_layers": 12,
-  "patch_size": 2,
+  "patch_size": 4,
+  "encoder_stride": 4,
   "qkv_bias": true,
   "transformers_version": ""
 }
