--- a/E-ViT-1/unicornEarth-ViT-base/config.json
+++ b/E-ViT-1/unicornEarth-ViT-base/config.json
@@ -5,7 +5,7 @@
   "attention_probs_dropout_prob": 0.0,
   "hidden_act": "gelu",
   "hidden_dropout_prob": 0.0,
-  "hidden_size": 120,
+  "hidden_size": 864,
   "image_size": 768,
   "initializer_range": 0.02,
   "intermediate_size": 3072,
@@ -14,8 +14,9 @@
   "num_attention_heads": 12,
   "num_channels": 1,
   "num_hidden_layers": 12,
-  "patch_size": 8,
-  "encoder_stride": 8,
+  "patch_size": 16,
+  "encoder_stride": 16,
   "qkv_bias": true,
+  "torch_dtype": "float32",
   "transformers_version": ""
 }
